Fix paused and active days numbers misalignment on decision
Apply to applications and NOIs

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
@@ -77,7 +77,7 @@ hr {
         font-size: 19px !important;
         line-height: 21px !important;
         width: 19px;
-        vertical-align: middle;
+        vertical-align: sub;
       }
     }
   }
